--- a/package.json
+++ b/package.json
@@ -9,10 +9,14 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "animate.css": "^4.1.1",
+    "classnames": "^2.2.5",
     "react": "^17.0.2",
     "react-animate-on-scroll": "^2.1.5",
     "react-dom": "^17.0.2",
+    "react-reveal": "^1.2.2",
     "react-scripts": "4.0.3",
+    "react-scroll": "^1.8.2",
+    "react-scroll-effects": "^1.0.13",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
