--- a/package.json
+++ b/package.json
@@ -9,7 +9,12 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "animate.css": "^4.1.1",
+    "axios": "^0.21.1",
     "classnames": "^2.2.5",
+    "cors": "^2.8.5",
+    "emailjs-com": "^2.6.4",
+    "express": "^4.17.1",
+    "nodemailer": "^6.6.1",
     "react": "^17.0.2",
     "react-animate-on-scroll": "^2.1.5",
     "react-dom": "^17.0.2",
@@ -42,5 +47,6 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "proxy": "http://localhost:8080/"
 }
